--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.4",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^3.1.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
